[tool.poetry]
name = "fastapi-musthave-diploma"
version = "0.1.0"
description = ""
authors = ["Kirill Zhukov <kdzhukov@sbercloud.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.8.1"
asyncpg = "^0.26.0"
uvicorn = "^0.18.3"
psycopg2-binary = "^2.9.3"
fastapi = "^0.85.0"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
pylint = "^2.15.3"
pytest = "^7.1.3"
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
